--- a/Css/Estilos.css
+++ b/Css/Estilos.css
@@ -93,6 +93,14 @@
 }
 
 .img5{
+    margin-top: 49px;
+    margin-left: 12px;
+    width: 334px;
+    height: 243px;
+    position: absolute;
+}
+
+.img5{
     margin-top: 221px;
     margin-left: -4px;
     width: 341px;
